--- a/epsilon_point_controller.html
+++ b/epsilon_point_controller.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <script type="text/javascript" id="MathJax-script" async
+    src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+    </script>
+    <script>
+    MathJax = {
+        tex: {
+        inlineMath: [['$', '$']]
+        }
+    };
+    </script>
 </head>
 <body class="bg-light">
     <header class="bg-dark text-white py-4 mb-5">
