adding power consumption forecasting to stuff

--- a/index.html
+++ b/index.html
@@ -18,6 +18,23 @@
     </header>
 
     <main class="container">
+
+        <section class="project mb-5">
+            <div class="card shadow-sm">
+                <div class="card-body">
+                    <h2 class="card-title">Sandia National Laboratories: Pursuer-Evader Project</h2>
+                    <p class="card-text"><strong>Technologies:</strong> Reinforcement Learning, PyTorch, Simulink</p>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">Developed RL models for the pursuer team in pursuer-evader problems in PyTorch, surpassing the ProNav baseline.</li>
+                        <li class="list-group-item">Improved evader and pursuer policies through competitive self-play, allowing agents to train against each other effectively.</li>
+                        <li class="list-group-item">Integrated an IMU Simulink model into Rate Table simulations, elevating the precision of rate table dynamics analysis.</li>
+                    </ul>
+                    <div class="video mt-4">
+                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/piLDwxnZShw?autoplay=1&mute=1" title="YouTube video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="project mb-5">
             <div class="card shadow-sm">
                 <div class="card-body">
@@ -43,17 +60,13 @@
             </div>
         </section>
 
-
         <section class="project mb-5">
             <div class="card shadow-sm">
                 <div class="card-body">
-                    <h2 class="card-title">Power Consumption Forecasting</h2>
-                    <p class="card-text"><strong>Technologies:</strong> PyTorch, Pandas, Neural Networks</p>
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">Preprocessed a smart meter dataset of 5,000 homes to create optimal input for neural networks using Pandas.</li>
-                        <li class="list-group-item">Designed a deep residual network as a baseline for comparison against other neural network models.</li>
-                        <li class="list-group-item">Developed a CONV-LSTM model that outperformed the baseline XGBoost model while reducing training time by 90%.</li>
-                    </ul>
+                    <h2 class="card-title"><a href="power_consumption_forecasting.html" class="text-decoration-none">Power Consumption Forecasting</a></h2>
+                    <div class="video mt-4">
+                        <img src="figures/results_comparison.png" alt="Power Consumption Forecasting Results" class="img-fluid">
+                    </div>
                 </div>
             </div>
         </section>
@@ -69,22 +82,6 @@
             </div>
         </section>
 
-        <section class="project mb-5">
-            <div class="card shadow-sm">
-                <div class="card-body">
-                    <h2 class="card-title">Sandia National Laboratories: Pursuer-Evader Project</h2>
-                    <p class="card-text"><strong>Technologies:</strong> Reinforcement Learning, PyTorch, Simulink</p>
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">Developed RL models for the pursuer team in pursuer-evader problems in PyTorch, surpassing the ProNav baseline.</li>
-                        <li class="list-group-item">Improved evader and pursuer policies through competitive self-play, allowing agents to train against each other effectively.</li>
-                        <li class="list-group-item">Integrated an IMU Simulink model into Rate Table simulations, elevating the precision of rate table dynamics analysis.</li>
-                    </ul>
-                    <div class="video mt-4">
-                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/piLDwxnZShw?autoplay=1&mute=1" title="YouTube video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    </div>
-                </div>
-            </div>
-        </section>
     </main>
 
     <footer class="bg-dark text-white py-4 mt-5">
