adding contact info

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 <body class="bg-light">
     <header class="bg-dark text-white py-4 mb-5">
         <div class="container">
-        <h1 class="display-4">Timothy Dodge</h1>
+            <h1 class="display-4">Timothy Dodge</h1>
             <p class="lead">I am Timothy Dodge, an engineer with a passion for robotics, control systems, and data science. My experience spans from microdrones and reinforcement learning to energy optimization and hardware development. Welcome to my portfolio, where I showcase some of my key projects and contributions.</p>
+            <p>Contact me: <a href="mailto:tim.dodge64@gmail.com" class="text-white">tim.dodge64@gmail.com</a> | <a href="https://www.linkedin.com/in/timothy-dodge03" class="text-white">LinkedIn</a> | <a href="https://github.com/timdodge54" class="text-white">GitHub</a></p>
         </div>
     </header>
 
