--- a/index.html
+++ b/index.html
@@ -5,13 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects Portfolio</title>
     <link rel="icon" href="figures/robo.png" type="image/png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" async>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" as="style" onload="this.rel='stylesheet'">
     <style>
         .card {
-            max-width: 50%;
+            max-width: 75%;
             margin: 0 auto;
+        }
+
+        @media (max-width: 768px) {
+            .card {
+                max-width: 100%;
+            }
+        }
+
+        .card:hover {
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            transform: translateY(-5px);
+            transition: all 0.3s ease;
         }
     </style>
 </head>
@@ -20,11 +32,19 @@
         <div class="container">
             <h1 class="display-4">Timothy Dodge</h1>
             <p class="lead">I am Timothy Dodge, an engineer with a passion for robotics, control systems, and data science. My experience spans from microdrones and reinforcement learning to energy optimization and hardware development. Welcome to my portfolio, where I showcase some of my key projects and contributions.</p>
-            <p>Contact me: <a href="mailto:tim.dodge64@gmail.com" class="text-white">tim.dodge64@gmail.com</a> | <a href="https://www.linkedin.com/in/timothy-dodge03" class="text-white">LinkedIn</a> | <a href="https://github.com/timdodge54" class="text-white">GitHub</a></p>
+            <p>Contact me: <a href="mailto:tim.dodge64@gmail.com" class="text-white"><i class="fas fa-envelope"></i> tim.dodge64@gmail.com</a> | <a href="https://www.linkedin.com/in/timothy-dodge03" class="text-white"><i class="fab fa-linkedin"></i> LinkedIn</a> | <a href="https://github.com/timdodge54" class="text-white"><i class="fab fa-github"></i> GitHub</a></p>
         </div>
     </header>
-
-    <main class="container">
+        <section class="project mb-5">
+            <div class="card shadow-sm">
+                <div class="card-body">
+                    <h2 class="card-title"><a href="simulated_annealing_power_planning.html" class="text-decoration-none">Simulated Annealing Power Planning</a></h2>
+                    <div class="video mt-4">
+                        <img src="figures/greed_results.png" alt="Simulated Annealing Power Planning Results" class="img-fluid" loading="lazy">
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <section class="project mb-5">
             <div class="card shadow-sm">
@@ -37,21 +57,19 @@
                         <li class="list-group-item">Integrated an IMU Simulink model into Rate Table simulations, elevating the precision of rate table dynamics analysis.</li>
                     </ul>
                     <div class="video mt-4">
-                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/piLDwxnZShw?autoplay=1&mute=1" title="YouTube video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/piLDwxnZShw?autoplay=1&mute=1" title="YouTube video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
                     </div>
                 </div>
             </div>
         </section>
+
         <section class="project mb-5">
             <div class="card shadow-sm">
                 <div class="card-body">
                     <h2 class="card-title"><a href="mars_rover.html" class="text-decoration-none">Mars Rover Senior Design Project</a></h2>
-                    
                     <div class="video mt-4">
-                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/jd4WxPIJLbY?autoplay=1&mute=1" title="YouTube video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/jd4WxPIJLbY?autoplay=1&mute=1" title="YouTube video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
                     </div>
-            </div>
-        </section>
                 </div>
             </div>
         </section>
@@ -61,7 +79,7 @@
                 <div class="card-body">
                     <h2 class="card-title"><a href="epsilon_point_controller.html" class="text-decoration-none">Epsilon Point Controller</a></h2>
                     <div class="video mt-4">
-                        <img src="media/ep.gif" alt="Epsilon Point Controller Animation" class="img-fluid">
+                        <img src="media/ep.gif" alt="Epsilon Point Controller Animation" class="img-fluid" loading="lazy">
                     </div>
                 </div>
             </div>
@@ -72,7 +90,7 @@
                 <div class="card-body">
                     <h2 class="card-title"><a href="power_consumption_forecasting.html" class="text-decoration-none">Power Consumption Forecasting</a></h2>
                     <div class="video mt-4">
-                        <img src="figures/results_comparison.png" alt="Power Consumption Forecasting Results" class="img-fluid">
+                        <img src="figures/results_comparison.png" alt="Power Consumption Forecasting Results" class="img-fluid" loading="lazy">
                     </div>
                 </div>
             </div>
@@ -83,7 +101,7 @@
                 <div class="card-body">
                     <h2 class="card-title"><a href="rrt_planner.html" class="text-decoration-none">UAV RRT* Path Planner</a></h2>
                     <div class="video mt-4">
-                        <img src="media/rrt.gif" alt="RRT Planner Animation" class="img-fluid">
+                        <img src="media/rrt.gif" alt="RRT Planner Animation" class="img-fluid" loading="lazy">
                     </div>
                 </div>
             </div>
@@ -97,6 +115,6 @@
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" defer></script>
 </body>
-</html
+</html>
