--- a/simulated_annealing_power_planning.html
+++ b/simulated_annealing_power_planning.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simulated Annealing Power Planning</title>
+    <title>Connected Communities Simulated Annealing</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <style>
         .content {
@@ -19,57 +19,75 @@
 </head>
 <body class="bg-light">
     <main class="container content bg-white shadow-sm p-4 my-5 rounded">
-        <h1>Power Forecasting With DNN</h1>
+        <h1>Connected Communities Simulated Annealing</h1>
 
-        <section id="introduction">
-            <h2>Introduction</h2>
-            <p>This is a project for power consumption forecasting with deep neural networks. This project utilized several different neural network architectures to predict power consumption.</p>
+        <section id="getting-started">
+            <h2>Getting Started</h2>
+            <h3>Downloading and Setting Up Workspace</h3>
+            <p>This code base was built on ROS 2 Humble Haskell. This ROS Distro must be installed to run the code. The instructions assume you are using a Debian-based distribution.</p>
+            <p>Each of the required repositories can be downloaded using the <code>wstool</code> tool. To use <code>wstool</code>, follow these steps:</p>
+            <ul>
+                <li>Create a workspace folder that will house the project: <code>mkdir -p ~/connected_communities_SA/src</code></li>
+                <li>Navigate to the <code>src</code> folder</li>
+                <li>Create a new rosinstall file called <code>cc.rosinstall</code> with the following contents:</li>
+            </ul>
+            <pre><code>- git: {local-name: connected_communities_SA,
+       uri: 'git@github.com:timdodge54/Simulated-Annealing-Power-Planning.git',
+       version: main}
+            </code></pre>
+            <ul>
+                <li>Run the following commands:</li>
+            </ul>
+            <pre><code>wstool init .
+wstool merge cc.rosinstall
+wstool up
+            </code></pre>
         </section>
 
-        <section id="data-preprocessing">
-            <h2>Data and Data Preprocessing</h2>
-            <p>The data is from <a href="https://www.kaggle.com/datasets/jeanmidev/smart-meters-in-london">Kaggle</a>. The data is from smart meters in homes in the London area dataset. The data is from 2011 to 2014, in 30-minute intervals. It contains power data per half hour as well as several weather features.</p>
-            <p>To process the weather data, it was augmented to match the half-hour frequency of the power dataset through the use of quadratic interpolation. For descriptive columns, the descriptors from preceding rows were copied. The important columns and processes from the descriptor headings were processed into numerical values. After processing, the weather data contains information on visibility, temperature, dew point, pressure, wind speed, precipitation type, and humidity.</p>
-            <p>The power data was normalized by summing the power consumption across all households for each time interval and dividing by the total number of homes per time index. All values were then normalized using sklearn's MinMaxScaler.</p>
+        <section id="python-venv">
+            <h3>Creating Python Virtual Environment</h3>
+            <p>To create a virtual environment, you must be in the root of the workspace. The command below will create an alias for creating the needed virtual environment into your <code>bashrc</code>:</p>
+            <pre><code>alias make_cc_venv='python3 -m venv --system-site-packages venv && touch venv/COLCON_IGNORE'</code></pre>
+            <p>The following command is an alias that will allow you to build the code. IT MUST BE RUN FROM THE ROOT OF THE WORKSPACE.</p>
         </section>
 
-        <section id="training-methodology">
-            <h2>Training Methodology</h2>
-            <p>A standard 70% Training, 10% Validation, and 20% Testing split was used.</p>
+        <section id="building-code">
+            <h3>Building the Code</h3>
+            <p>For all other builds, the following alias can be used. It will source the environment and build the code:</p>
+            <pre><code>alias build='source venv/bin/activate && colcon build --symlink-install && . install/setup.bash'</code></pre>
         </section>
 
-        <section id="models">
-            <h2>Models</h2>
+        <section id="description">
+            <h2>Description of Code</h2>
+            <p>The overall node structure is shown in the figure below:</p>
+            <img src="figures/node_struct.png" alt="Node Structure">
+            <p>The main ROS node that performs all calculations is the power node. Several of these nodes can run simultaneously. Each node passes its information to a filter node, which waits for all nodes to execute and then passes the information to the plotter node. The planner class is responsible for generating and accepting new solutions. It houses both a greedy and a Simulated Annealing planner.</p>
+            <img src="figures/planner.png" alt="Planner">
+            <p>Within the planner class, solutions are held. The diagram for the solution class is shown below:</p>
+            <img src="figures/power_sol.png" alt="Power Solution">
+            <ul>
+                <li><strong>EnergyTimeSlots:</strong> This data member tracks the SOC of the battery over time. Each index of this data member stores the conservative power estimate defined and the accumulated energy based on the power and energy of the previous index within the <code>EnergyTimeSlots</code> data member.</li>
+                <li><strong>Event Map:</strong> This is a hash map that associates event IDs with a struct containing information such as event ID, power, start time, and end time.</li>
+            </ul>
+        </section>
 
-            <h3>Baseline Model</h3>
-            <p>To compare our neural networks, the XGBoost algorithm was utilized. The number of estimators used was 1000.</p>
-
-            <h3>Deep Residual Network</h3>
-            <p>The first neural network used was a Deep Residual Neural Network. This network and all proceeding networks were implemented in PyTorch. Knowing that time series forecasting is an extremely complicated problem for a single output, it was clear that a linear network would need many layers to meaningfully process the input and predict an output window. As a result, residual connections were used between each layer to reduce the vanishing gradient problem that plagues neural networks deeper than seven layers.</p>
-            <img src="figures/DeepRes_Arch.png" alt="Deep Residual Network Architecture">
-            <p>The above figure shows the overall architecture of the Deep Residual Network. Residual connections are in the form of concatenating the output of a layer with its input, allowing the network to have ten layers with roughly 1000 nodes at each hidden layer. However, the ultra-deepness of the network also comes at the cost of having millions of learnable parameters.</p>
-
-            <h3>Convolutional Preprocessing - Fully Connected (CONV)</h3>
-            <p>A convolutional pre-processing (CONV) layer was employed before the dense layers of the neural network to take advantage of the time dependence of the input window. This layer effectively acts as a feature extraction layer for the power consumption data, allowing for more meaningful input to the dense layers. There is locality between each half-hour measurement in the input window, and a convolution through time helps the network extract these features more effectively before the dense layers.</p>
-            <img src="figures/CNN_Prep.png" alt="Convolutional Neural Network Architecture">
-
-            <h3>(CONV) - LSTM</h3>
-            <p>Building off the success of the CONV layer, the use of an LSTM was identified to take advantage of the interdependence of each point in the output window on one another. Looking at each half-hour prediction in the 24-hour output window, all predictions (except for the first) are dependent on all previous predictions. This makes LSTM ideal due to its cyclical method of inference. The LSTM architecture was implemented as shown in the below figure: a CONV layer extracts features from the power consumption data, followed by a linear layer to expand the features into an input sequence for the LSTM. Finally, an LSTM processes the input sequence and linear layers decode outputs from the LSTM into a power forecast.</p>
-            <img src="figures/LSTM_Arch.png" alt="LSTM Architecture">
+        <section id="running-code">
+            <h2>Running the Code</h2>
+            <p>To run the <code>BatteryAggregateBrute</code> class and see the overall timing as well as the average timing of adding and removing events, run the following command:</p>
+            <pre><code>ros2 launch power_energy_propogation test_battery_aggregation_brute.launch.py</code></pre>
         </section>
 
         <section id="results">
             <h2>Results</h2>
+            <h3>Greedy Results</h3>
+            <img src="figures/Greedy.png" alt="Greedy Results">
 
-            <h3>Final Day Forecast Comparison</h3>
-            <p>The figure below shows the final day in the test set for each model. The true results are also shown for comparison. The CONV-LSTM model is the most accurate, followed by XGBoost, then the CONV model, and finally the Deep Residual Network. The XGBoost model tends to overestimate, which can be a conservative estimate for power consumption.</p>
-            <img src="figures/results_comparison.png" alt="Final Day Forecast Comparison">
+            <h3>Simulated Annealing Results</h3>
+            <img src="figures/SA.png" alt="Simulated Annealing Results">
 
-            <h3>Loss Comparison</h3>
-            <img src="figures/loss_comparison.png" alt="Loss Comparison">
-
-            <h3>Training Time Comparison</h3>
-            <img src="figures/timing_comparison.png" alt="Training Time Comparison">
+            <h3>Results with Multiple Batteries</h3>
+            <img src="figures/greedy_results.png" alt="Greedy Results with Multiple Batteries">
+            <img src="figures/fitness_resutls_greedy.png" alt="Fitness Results for Greedy Approach">
         </section>
     </main>
 
