--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="card-body">
                     <h2 class="card-title"><a href="simulated_annealing_power_planning.html" class="text-decoration-none">Simulated Annealing Power Planning</a></h2>
                     <div class="video mt-4">
-                        <img src="figures/greed_results.png" alt="Simulated Annealing Power Planning Results" class="img-fluid" loading="lazy">
+                        <img src="figures/greedy_results.png" alt="Simulated Annealing Power Planning Results" class="img-fluid" loading="lazy">
                     </div>
                 </div>
             </div>
