--- a/index.html
+++ b/index.html
@@ -36,6 +36,17 @@
         </div>
     </header>
 
+
+        <section class="project mb-5">
+            <div class="card shadow-sm">
+                <div class="card-body">
+                    <h2 class="card-title"><a href="simulated_annealing_power_planning.html" class="text-decoration-none">Simulated Annealing Power Planning</a></h2>
+                    <div class="video mt-4 text-center">
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section class="project mb-5">
             <div class="card shadow-sm">
                 <div class="card-body">
@@ -68,8 +79,7 @@
             <div class="card shadow-sm">
                 <div class="card-body">
                     <h2 class="card-title"><a href="epsilon_point_controller.html" class="text-decoration-none">Epsilon Point Controller</a></h2>
-                    <div class="video mt-4">
-                        <img src="media/ep.gif" alt="Epsilon Point Controller Animation" class="img-fluid" loading="lazy">
+                    <div class="video mt-4 text-center">
                     </div>
                 </div>
             </div>
@@ -79,8 +89,7 @@
             <div class="card shadow-sm">
                 <div class="card-body">
                     <h2 class="card-title"><a href="power_consumption_forecasting.html" class="text-decoration-none">Power Consumption Forecasting</a></h2>
-                    <div class="video mt-4">
-                        <img src="figures/results_comparison.png" alt="Power Consumption Forecasting Results" class="img-fluid" loading="lazy">
+                    <div class="video mt-4 text-center">
                     </div>
                 </div>
             </div>
@@ -90,19 +99,7 @@
             <div class="card shadow-sm">
                 <div class="card-body">
                     <h2 class="card-title"><a href="rrt_planner.html" class="text-decoration-none">UAV RRT* Path Planner</a></h2>
-                    <div class="video mt-4">
-                        <img src="media/rrt.gif" alt="RRT Planner Animation" class="img-fluid" loading="lazy">
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="project mb-5">
-            <div class="card shadow-sm">
-                <div class="card-body">
-                    <h2 class="card-title"><a href="simulated_annealing_power_planning.html" class="text-decoration-none">Simulated Annealing Power Planning</a></h2>
-                    <div class="video mt-4">
-                        <img src="figures/greedy_results.png" alt="Simulated Annealing Power Planning Results" class="img-fluid" loading="lazy">
+                    <div class="video mt-4 text-center">
                     </div>
                 </div>
             </div>
