--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
                 max-width: 100%;
             }
         }
+        .video {
+        display: flex;
+        justify-content: center; /* Centers the GIF horizontally */
+        align-items: center; /* Centers the GIF vertically */
+        }
 
         .card:hover {
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
