--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,8 @@
     <link rel="icon" href="figures/robo.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" async>
     <link rel="stylesheet" href="styles.css">
-    <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" as="style" onload="this.rel='stylesheet'">
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" as="style"
+        onload="this.rel='stylesheet'">
     <style>
         .card {
             max-width: 75%;
@@ -19,10 +21,13 @@
                 max-width: 100%;
             }
         }
+
         .video {
-        display: flex;
-        justify-content: center; /* Centers the GIF horizontally */
-        align-items: center; /* Centers the GIF vertically */
+            display: flex;
+            justify-content: center;
+            /* Centers the GIF horizontally */
+            align-items: center;
+            /* Centers the GIF vertically */
         }
 
         .card:hover {
@@ -32,86 +37,109 @@
         }
     </style>
 </head>
+
 <body class="bg-light">
     <header class="bg-dark text-white py-4 mb-5">
         <div class="container">
             <h1 class="display-4">Timothy Dodge</h1>
-            <p class="lead">I am Timothy Dodge, an engineer with a passion for robotics, control systems, and data science. My experience spans from microdrones and reinforcement learning to energy optimization and hardware development. Welcome to my portfolio, where I showcase some of my key projects and contributions.</p>
-            <p>Contact me: <a href="mailto:tim.dodge64@gmail.com" class="text-white"><i class="fas fa-envelope"></i> tim.dodge64@gmail.com</a> | <a href="https://www.linkedin.com/in/timothy-dodge03" class="text-white"><i class="fab fa-linkedin"></i> LinkedIn</a> | <a href="https://github.com/timdodge54" class="text-white"><i class="fab fa-github"></i> GitHub</a></p>
+            <p class="lead">I am Timothy Dodge, an engineer with a passion for robotics, control systems, and data
+                science. My experience spans from microdrones and reinforcement learning to energy optimization and
+                hardware development. Welcome to my portfolio, where I showcase some of my key projects and
+                contributions.</p>
+            <p>Contact me: <a href="mailto:tim.dodge64@gmail.com" class="text-white"><i class="fas fa-envelope"></i>
+                    tim.dodge64@gmail.com</a> | <a href="https://www.linkedin.com/in/timothy-dodge03"
+                    class="text-white"><i class="fab fa-linkedin"></i> LinkedIn</a> | <a
+                    href="https://github.com/timdodge54" class="text-white"><i class="fab fa-github"></i> GitHub</a></p>
         </div>
     </header>
 
-        <section class="project mb-5">
-            <div class="card shadow-sm">
-                <div class="card-body">
-                    <h2 class="card-title">Sandia National Laboratories: Pursuer-Evader Project</h2>
-                    <p class="card-text"><strong>Technologies:</strong> Reinforcement Learning, PyTorch, Simulink</p>
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">Developed RL models for the pursuer team in pursuer-evader problems in PyTorch, surpassing the ProNav baseline.</li>
-                        <li class="list-group-item">Improved evader and pursuer policies through competitive self-play, allowing agents to train against each other effectively.</li>
-                        <li class="list-group-item">Integrated an IMU Simulink model into Rate Table simulations, elevating the precision of rate table dynamics analysis.</li>
-                    </ul>
-                    <div class="video mt-4">
-                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/piLDwxnZShw?autoplay=1&mute=1" title="YouTube video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
-                    </div>
+    <section class="project mb-5">
+        <div class="card shadow-sm">
+            <div class="card-body">
+                <h2 class="card-title">Sandia National Laboratories: Pursuer-Evader Project</h2>
+                <p class="card-text"><strong>Technologies:</strong> Reinforcement Learning, PyTorch, Simulink</p>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Developed RL models for the pursuer team in pursuer-evader problems in
+                        PyTorch, surpassing the ProNav baseline.</li>
+                    <li class="list-group-item">Improved evader and pursuer policies through competitive self-play,
+                        allowing agents to train against each other effectively.</li>
+                    <li class="list-group-item">Integrated an IMU Simulink model into Rate Table simulations, elevating
+                        the precision of rate table dynamics analysis.</li>
+                </ul>
+                <div class="video mt-4">
+                    <iframe width="100%" height="315" src="https://youtu.be/TNFQRwU95Wg?autoplay=1&mute=1"
+                        title="YouTube video" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen loading="lazy"></iframe>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
 
-        <section class="project mb-5">
-            <div class="card shadow-sm">
-                <div class="card-body">
-                    <h2 class="card-title"><a href="mars_rover.html" class="text-decoration-none">Mars Rover Senior Design Project</a></h2>
-                    <div class="video mt-4">
-                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/jd4WxPIJLbY?autoplay=1&mute=1" title="YouTube video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
-                    </div>
+    <section class="project mb-5">
+        <div class="card shadow-sm">
+            <div class="card-body">
+                <h2 class="card-title"><a href="mars_rover.html" class="text-decoration-none">Mars Rover Senior Design
+                        Project</a></h2>
+                <div class="video mt-4">
+                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/jd4WxPIJLbY?autoplay=1&mute=1"
+                        title="YouTube video" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen loading="lazy"></iframe>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
 
-        <section class="project mb-5">
-            <div class="card shadow-sm">
-                <div class="card-body">
-                    <h2 class="card-title"><a href="epsilon_point_controller.html" class="text-decoration-none">Epsilon Point Controller</a></h2>
-                    <div class="video mt-4">
-                        <img src="media/ep.gif" alt="Epsilon Point Controller Animation" class="img-fluid" loading="lazy">
-                    </div>
+    <section class="project mb-5">
+        <div class="card shadow-sm">
+            <div class="card-body">
+                <h2 class="card-title"><a href="epsilon_point_controller.html" class="text-decoration-none">Epsilon
+                        Point Controller</a></h2>
+                <div class="video mt-4">
+                    <img src="media/ep.gif" alt="Epsilon Point Controller Animation" class="img-fluid" loading="lazy">
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
 
-        <section class="project mb-5">
-            <div class="card shadow-sm">
-                <div class="card-body">
-                    <h2 class="card-title"><a href="power_consumption_forecasting.html" class="text-decoration-none">Power Consumption Forecasting</a></h2>
-                    <div class="video mt-4">
-                        <img src="figures/results_comparison.png" alt="Power Consumption Forecasting Results" class="img-fluid" loading="lazy">
-                    </div>
+    <section class="project mb-5">
+        <div class="card shadow-sm">
+            <div class="card-body">
+                <h2 class="card-title"><a href="power_consumption_forecasting.html" class="text-decoration-none">Power
+                        Consumption Forecasting</a></h2>
+                <div class="video mt-4">
+                    <img src="figures/results_comparison.png" alt="Power Consumption Forecasting Results"
+                        class="img-fluid" loading="lazy">
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
 
-        <section class="project mb-5">
-            <div class="card shadow-sm">
-                <div class="card-body">
-                    <h2 class="card-title"><a href="rrt_planner.html" class="text-decoration-none">UAV RRT* Path Planner</a></h2>
-                    <div class="video mt-4">
-                        <img src="media/rrt.gif" alt="RRT Planner Animation" class="img-fluid" loading="lazy">
-                    </div>
+    <section class="project mb-5">
+        <div class="card shadow-sm">
+            <div class="card-body">
+                <h2 class="card-title"><a href="rrt_planner.html" class="text-decoration-none">UAV RRT* Path Planner</a>
+                </h2>
+                <div class="video mt-4">
+                    <img src="media/rrt.gif" alt="RRT Planner Animation" class="img-fluid" loading="lazy">
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
 
-        <section class="project mb-5">
-            <div class="card shadow-sm">
-                <div class="card-body">
-                    <h2 class="card-title"><a href="simulated_annealing_power_planning.html" class="text-decoration-none">Simulated Annealing Power Planning</a></h2>
-                    <div class="video mt-4">
-                        <img src="figures/greedy_results.png" alt="Simulated Annealing Power Planning Results" class="img-fluid" loading="lazy">
-                    </div>
+    <section class="project mb-5">
+        <div class="card shadow-sm">
+            <div class="card-body">
+                <h2 class="card-title"><a href="simulated_annealing_power_planning.html"
+                        class="text-decoration-none">Simulated Annealing Power Planning</a></h2>
+                <div class="video mt-4">
+                    <img src="figures/greedy_results.png" alt="Simulated Annealing Power Planning Results"
+                        class="img-fluid" loading="lazy">
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
 
     </main>
 
@@ -123,4 +151,5 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" defer></script>
 </body>
+
 </html>
