--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         the precision of rate table dynamics analysis.</li>
                 </ul>
                 <div class="video mt-4">
-                    <iframe width="100%" height="315" src="https://youtu.be/TNFQRwU95Wg?autoplay=1&mute=1"
+                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/TNFQRwU95Wg??autoplay=1&mute=1"
                         title="YouTube video" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen loading="lazy"></iframe>
