adding resume button

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
                     tim.dodge64@gmail.com</a> | <a href="https://www.linkedin.com/in/timothy-dodge03"
                     class="text-white"><i class="fab fa-linkedin"></i> LinkedIn</a> | <a
                     href="https://github.com/timdodge54" class="text-white"><i class="fab fa-github"></i> GitHub</a></p>
+            <a href="media/Resume_Dodge.pdf" class="btn btn-light mt-3" target="_blank">View Resume</a>
         </div>
     </header>
-
     <section class="project mb-5">
         <div class="card shadow-sm">
             <div class="card-body">
