--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" as="style"
         onload="this.rel='stylesheet'">
     <style>
+        body {
+            background-color: #f0f0f0;
+            /* Light grey background color */
+        }
+
+        header {
+            background-image: url('figures/cf_long_exposure.jpg');
+            background-size: cover;
+            background-position: center;
+            color: white;
+            padding: 4rem 0;
+            /* Increased padding to show more of the image */
+        }
+
         .card {
             max-width: 75%;
             margin: 0 auto;
