--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         onload="this.rel='stylesheet'">
     <style>
         body {
-            background-color: #f0f0f0;
+            background-color: #f0f0f088;
             /* Light grey background color */
         }
 
@@ -20,7 +20,7 @@
             background-image: url('figures/cf_long_exposure.jpg');
             background-size: cover;
             background-position: center;
-            color: white;
+            color: rgb(255, 255, 255);
             padding: 4rem 0;
             /* Increased padding to show more of the image */
         }
@@ -55,8 +55,9 @@
 <body class="bg-light">
     <header class="bg-dark text-white py-4 mb-5">
         <div class="container">
-            <h1 class="display-4">Timothy Dodge</h1>
-            <p class="lead">I am Timothy Dodge, an engineer with a passion for robotics, control systems, and data
+            <h1 class="display-4" style="background-color: rgba(6, 240, 220, 0.623); padding: 5px;">Timothy Dodge</h1>
+            <p class="lead" style="background-color: rgba(6, 240, 220, 0.6423); padding: 5px;">I am Timothy Dodge, an
+                engineer with a passion for robotics, control systems, and data
                 science. My experience spans from microdrones and reinforcement learning to energy optimization and
                 hardware development. Welcome to my portfolio, where I showcase some of my key projects and
                 contributions.</p>
