--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         onload="this.rel='stylesheet'">
     <style>
         body {
-            background-color: #f0f0f034;
+            background-color: #464646;
             /* Light grey background color */
         }
 
@@ -52,7 +52,7 @@
     </style>
 </head>
 
-<body class="bg-light">
+<body style="background-color: #464646;" class="bg-light">
     <header class="bg-dark text-white py-4 mb-5">
         <div class="container">
             <h1 class="display-4" style="background-color: rgba(110, 110, 110, 0.623); padding: 5px;">Timothy Dodge</h1>
