--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" as="style"
         onload="this.rel='stylesheet'">
     <style>
-        html,
         body {
-            height: 100%;
-            margin: 0;
-            background-color: #464646 !important;
+            background-color: #464646;
+            /* Light grey background color */
         }
 
         header {
