--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 science. My experience spans from microdrones and reinforcement learning to energy optimization and
                 hardware development. Welcome to my portfolio, where I showcase some of my key projects and
                 contributions.</p>
-            <p, style="background-color: rgba(110, 110, 110, 0.623);"> padding: 5px; >Contact me: <a href="
+            <p, style="background-color: rgba(110, 110, 110, 0.623);padding: 5px;"> Contact me: <a href="
                 mailto:tim.dodge64@gmail.com" class="text-white"><i class="fas fa-envelope"></i>
                     tim.dodge64@gmail.com</a> | <a href="https://www.linkedin.com/in/timothy-dodge03"
                     class="text-white"><i class="fab fa-linkedin"></i> LinkedIn</a> | <a
